--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ and is wrapped around the whole page content. -->
 <!-- This image will be replaced once the js code runs. -->
 
 <div class="w3-center">
-<!--	<img id="selected-image" class="w3-round adjust-image" src="samplepic.jpg" alt=""> -->
+	<img id="selected-image" class="w3-round adjust-image" src="samplepic.jpg" alt=""> 
 </div>
 <div class="w3-center">
 	<div class="progress-bar">Ai is Loading...</div>
